# temp3

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: build-and-release.yml
src/: config.py  main.py
src/components/: __init__.py  dialogs.py  snackbars.py  texts.py
src/controllers/: updater.py
