[project]
name = "temp3"
version = "0.1.19"
description = "My temp app"
requires-python = ">=3.9"
authors = [{ name = "NextBale", email = "diegobalestra9@gmail.com" }]
dependencies = ["flet==0.28.3", "requests"]

[tool.flet]
org = "com.nextbale"
product = "MaxS"                           # Display name
company = "NextBale"
copyright = "Copyright © 2025 by NextBale"
app.path = "src"
